Dina's Cosmetic Upgrades

--- a/MyFitnessLad/app/src/main/res/layout/activity_intake.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_intake.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FCFBF2">
 
     <EditText
         android:id="@+id/inputCalories"
@@ -31,31 +32,35 @@
 
     <Button
         android:id="@+id/newMeal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="159dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#FF6E79"
         android:onClick="CreateMeal"
         android:text="Create Meal"
         android:textSize="20sp"
+        app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503" />
+        app:layout_constraintVertical_bias="0.505" />
 
     <Button
         android:id="@+id/clearFields"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="159dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#FF6E79"
         android:onClick="ClearFields"
         android:text="Clear Fields"
         android:textSize="20sp"
+        app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintHorizontal_bias="0.128"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503" />
+        app:layout_constraintVertical_bias="0.505" />
 
     <EditText
         android:id="@+id/inputFats"
