--- a/MyFitnessLad/app/src/main/res/layout/activity_main.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#FCFBF2">
 
     <Button
         android:id="@+id/reset"
         android:layout_width="168dp"
         android:layout_height="50dp"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:onClick="resetValues"
         android:text="Enter Info"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,6 +27,8 @@
         android:id="@+id/intake"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:onClick="Intake"
         android:text="Intake"
         android:textSize="20sp"
@@ -37,6 +42,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:text="Calorie Goals"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -161,6 +168,8 @@
         android:id="@+id/ibw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:onClick="IBW"
         android:text="IBW"
         android:textSize="20sp"
@@ -175,6 +184,8 @@
         android:id="@+id/bmi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:onClick="BMI"
         android:text="BMI"
         android:textSize="20sp"
@@ -189,6 +200,8 @@
         android:id="@+id/history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:onClick="History"
         android:text="History"
         android:textSize="20sp"
@@ -200,15 +213,27 @@
         app:layout_constraintVertical_bias="0.408" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="367dp"
-        android:layout_height="171dp"
+        android:id="@+id/imageV"
+        android:layout_width="276dp"
+        android:layout_height="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/myfitnessladlogo" />
+        app:srcCompat="@drawable/bitmap" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="149dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.096"
+        app:srcCompat="@drawable/g566" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
