--- a/MyFitnessLad/app/src/main/res/layout/activity_bmi.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_bmi.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".DisplayBMI">
+    tools:context=".DisplayBMI"
+    android:background="#FCFBF2">
 
     <TextView
         android:id="@+id/currentBmi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BMI"
-        android:textColor="#00F"
+        android:textColor="#ff6e79"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
