--- a/MyFitnessLad/app/src/main/res/layout/activity_history.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_history.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".History">
+    tools:context=".History"
+    android:background="#FCFBF2">
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,6 +35,8 @@
         android:id="@+id/resetHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FF6E79"
+        app:cornerRadius="16dp"
         android:onClick="ResetHistory"
         android:text="Reset History"
         android:textSize="14sp"
