--- a/MyFitnessLad/app/src/main/res/layout/activity_ibw.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_ibw.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".DisplayIBW">
+    tools:context=".DisplayIBW"
+    android:background="#FCFBF2">
 
     <TextView
         android:id="@+id/textView"
@@ -24,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RANGE"
-        android:textColor="#00F"
+        android:textColor="#ff6e79"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
