--- a/MyFitnessLad/app/src/main/res/layout/activity_intake.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_intake.xml
@@ -155,6 +155,19 @@
         app:layout_constraintVertical_bias="0.717" />
 
     <TextView
+        android:id="@+id/errorBox"
+        android:layout_width="336dp"
+        android:layout_height="76dp"
+        android:text=""
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.848" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total Calories: "
