--- a/MyFitnessLad/app/src/main/res/layout/activity_main.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_main.xml
@@ -43,14 +43,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#FF6E79"
-        app:cornerRadius="16dp"
         android:text="Calorie Goals"
         android:textSize="30sp"
+        app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.552" />
+        app:layout_constraintVertical_bias="0.577" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,6 +76,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.748" />
+
+    <TextView
+        android:id="@+id/gainWeightRemaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="gValueR"
+        android:textSize="20sp"
+        android:textColor="#009000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.802" />
 
     <TextView
         android:id="@+id/maintainWeight"
@@ -126,6 +141,34 @@
         app:layout_constraintVertical_bias="0.748" />
 
     <TextView
+        android:id="@+id/loseWeightRemaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lValueR"
+        android:textSize="20sp"
+        android:textColor="#009000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.802" />
+
+    <TextView
+        android:id="@+id/maintainWeightRemaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="mValueR"
+        android:textColor="#009000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.802" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Maintain Weight"
@@ -150,19 +193,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.934" />
-
-    <TextView
-        android:layout_width="294dp"
-        android:layout_height="47dp"
-        android:text="Based on your body parameters, here are the calorie requirements to meet each goal."
-        android:textAlignment="center"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.634" />
 
     <Button
         android:id="@+id/ibw"
